RESOLVED FIXED66303
[REGRESSION] Media controls should always be enabled when scripting is disabled
https://bugs.webkit.org/show_bug.cgi?id=66303
Summary [REGRESSION] Media controls should always be enabled when scripting is disabled
Eric Carlson
Reported 2011-08-16 08:06:08 PDT
The spec says "... if scripting is disabled for the media element, then the user agent should expose a user interface to the user"[1]. WebKit previously forced controls to be visible when scripting was disabled, but that was lost along the way. [1] http://www.w3.org/TR/html5/video.html#attr-media-controls
Attachments
Proposed patch (7.57 KB, patch)
2011-08-16 08:45 PDT, Eric Carlson
dglazkov: review+
Radar WebKit Bug Importer
Comment 1 2011-08-16 08:06:28 PDT
Eric Carlson
Comment 2 2011-08-16 08:45:32 PDT
Created attachment 104052 [details] Proposed patch
Eric Carlson
Comment 3 2011-08-16 09:15:02 PDT
Tony Chang
Comment 4 2011-08-16 10:08:25 PDT
Did you mean to put the -iframe.html file in the resources subdirectory? run-webkit-tests is treating it as a separate test.
Tony Chang
Comment 5 2011-08-16 10:08:33 PDT
I will try to fix.
Tony Chang
Comment 6 2011-08-16 10:16:50 PDT
Eric Carlson
Comment 7 2011-08-16 10:24:37 PDT
Eric Carlson
Comment 8 2011-08-16 11:48:08 PDT
(In reply to comment #6) > http://trac.webkit.org/changeset/93123 You shouldn't have had to create Chromium specific results - the test doesn't need to include the control location in the test results. I will fix this.
Eric Carlson
Comment 9 2011-08-16 13:14:34 PDT
http://trac.webkit.org/changeset/93148 should make the results platform independent.
Tony Chang
Comment 10 2011-08-16 13:36:32 PDT
(In reply to comment #9) > http://trac.webkit.org/changeset/93148 should make the results platform independent. Thanks!
Note You need to log in before you can comment on or make changes to this bug.