2011-08-16  Eric Carlson  <eric.carlson@apple.com>

[REGRESSION] Media controls should always be enabled when scripting is disabled
        https://bugs.webkit.org/show_bug.cgi?id=66303

        Reviewed by Dimitri Glazkov.

        Tests: media/video-controls-no-scripting-iframe.html
               media/video-controls-no-scripting.html

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::attributeChanged): Move the controls enabling/disabling code
            to configureMediaControls.
        (WebCore::HTMLMediaElement::prepareForLoad): Call configureMediaControls.
        (WebCore::HTMLMediaElement::configureMediaControls): New, move code duplicated in
            attributeChanged and preDispatchEventHandler here.
        (WebCore::HTMLMediaElement::preDispatchEventHandler): Move the controls enabling/disabling code
            to configureMediaControls.
        * html/HTMLMediaElement.h:

2011-08-16  Eric Carlson  <eric.carlson@apple.com>

        [REGRESSION] Media controls should always be enabled when scripting is disabled
        https://bugs.webkit.org/show_bug.cgi?id=66303

        Reviewed by Dimitri Glazkov.

        * media/video-controls-no-scripting-expected.txt: Added.
        * media/video-controls-no-scripting-iframe.html: Added.
        * media/video-controls-no-scripting.html: Added.


Canonical link: https://commits.webkit.org/82122@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93108 268f45cc-cd09-0410-ab3c-d52691b4dbfc